# tg-bot-feedback

./: .gitignore  pyproject.toml
bot/: __main__.py  commandsworker.py  config_reader.py
bot/handlers/: __init__.py  adminmode.py  errors.py  usermode.py
bot/locales/ru/: feedback.ftl  strings.ftl
